--- a/css/nice-select.css
+++ b/css/nice-select.css
@@ -139,6 +139,7 @@
   -webkit-transition: all 0.2s cubic-bezier(0.5, 0, 0, 1.25), opacity 0.15s ease-out;
   transition: all 0.2s cubic-bezier(0.5, 0, 0, 1.25), opacity 0.15s ease-out;
   z-index: 9;
+  width: 100%;
 }
 
 .nice-select .list:hover .option:not(:hover) {
